Fixed 50% of UI

--- a/website-projexts/Views/Project/ProjectList.cshtml
+++ b/website-projexts/Views/Project/ProjectList.cshtml
@@ -73,7 +73,7 @@
                                         <div class="col col-12 col-md-6 col-lg-4">
                                             <div class="card">
                                                 <img class="card-img-top w-100 d-block" style="height: 200px; object-fit: cover;"
-                                                     src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                                     src="@Url.Content(item.ProjectImage)">
                                                 <div class="card-body p-4">
                                                     <p class="text-primary card-text mb-0">
                                                         @Html.DisplayFor(modelItem => item.Category.Name)
