--- a/website-projexts/Views/Project/ProjectDetail.cshtml
+++ b/website-projexts/Views/Project/ProjectDetail.cshtml
@@ -24,7 +24,7 @@
                                 <h2>
                                     @Html.DisplayFor(model => model.ProjectName)
                                 </h2>
-                                <img class="img-fluid d-block" src="https://via.placeholder.com/800x280/87CEFA/000000" alt="First slide">
+                                <img class="img-fluid d-block" src="@Url.Content(Model.ProjectImage)" alt="First slide">
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-user" style="font-size: 30px;margin-right: 10px ;"></i>
@@ -90,10 +90,10 @@
                                 Chia sẻ
                             </button>
                             <div id="copyMessage" style="display: none;">URL copied to clipboard</div>
-                            @Html.ActionLink("Đóng Góp", "DonationCreate", "Project", new { projectID = Model.ProjectID }, new { @class = "btn btn-primary btn-lg form-control" })
+                            @Html.ActionLink("Đóng Góp", "DonationCreate", "Donation", new { projectID = Model.ProjectID }, new { @class = "btn btn-primary btn-lg form-control" })
                         </div>
                     </div>
-                    @{ Html.RenderAction("DonationPartial", "Project", new { ProjectID = Model.ProjectID });}
+                    @{ Html.RenderAction("DonationPartial", "Donation", new { ProjectID = Model.ProjectID });}
                 </div>
             </div>
         </div>
