--- a/website-projexts/Content/Site.css
+++ b/website-projexts/Content/Site.css
@@ -257,6 +257,19 @@ card-frame {
     padding-top: 10px;
 }
 
+.row > * {
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-top: var(--bs-gutter-y);
+}
+
+
+
+
+
 
 
 
