--- a/website-projexts/Content/procreate.css
+++ b/website-projexts/Content/procreate.css
@@ -938,7 +938,7 @@
 .clean-block.clean-form form {
     border-top: 2px solid #5ea4f3;
     background-color: #fff;
-    max-width: 500px;
+  /*  max-width: 700px;*/
     margin: auto;
     padding: 40px;
     box-shadow: 0 2px 10px rgba(0,0,0,.075);
