--- a/website-projexts/Views/Home/Index.cshtml
+++ b/website-projexts/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 @Styles.Render("~/Content/css")
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
@@ -9,13 +11,16 @@
 <body>
     <main class="page lanidng-page">
         <section>
-            <div data-bss-parallax-bg="true" style="height: 600px; background-image: url('/Content/img/header.jpg'); background-position: center; background-size: cover;">
+            <div data-bss-parallax-bg="true" style="height: 600px; background-image: url('@Url.Content("~/Content/img/header.jpeg")');background-position: center;background-size: cover;">
                 <div class="container h-100">
                     <div class="row h-100">
                         <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Bắt Đầu bảo vệ trái đất từ COMPANY</h1>
-                                <p class="my-3">Chúng tôi trao quyền cho bạn hành động. Bằng cách hỗ trợ các dự án của chúng tôi, bạn tạo ra sự khác biệt trong việc bảo vệ hành tinh của chúng ta.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#"><strong>Đăng Ký&nbsp;</strong></a><a class="btn btn-outline-primary btn-lg" role="button" href="#"><strong>Tìm hiểu thêm</strong></a>
+                                <h1 class="text-uppercase fw-bold">Bắt Đầu bảo vệ trái đất từ 
+                                <span style="color:#4AB67E">DoAN</span></h1>
+                                <p class="my-3">Trang web của chúng tôi trao quyền cho bạn hành động. Bằng cách hỗ trợ các dự án của chúng tôi, bạn tạo ra sự khác biệt trong việc bảo vệ hành tinh của chúng ta.</p>
+                                <a class="btn btn-primary btn-lg me-2" role="button" href="#"><strong>Đăng Ký</strong></a>
+                                <a class="btn btn-outline-success btn-lg" role="button" href="#"><strong>Tìm hiểu thêm</strong></a>
                             </div>
                         </div>
                     </div>
@@ -25,30 +30,30 @@
         <section class="portfolio-block skills">
             <div class="container">
                 <div class="heading">
-                    <h2>Hãy Chọn Chúng Tôi</h2>
+                    <h2><strong>Hãy chọn chúng tôi</strong></h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><i class="fa fa-smile-o rounded-circle" style="font-size: 36px;background-color: #4AB67E;padding: 20px;color: white;"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Dễ Dàng Sử Dụng</h3>
-                                <p class="card-text"><br><span style="color: rgb(32, 33, 36); background-color: rgb(248, 249, 250);">Trang web của chúng tôi được thiết kế chu đáo để đơn giản. Điều hướng dễ dàng và các danh mục dự án rõ ràng đảm bảo rằng mọi người đều có thể góp phần bảo vệ môi trường một cách dễ dàng.</span><br><br></p>
+                                <p class="card-text"><span style="color: rgb(32, 33, 36); background-color: rgb(248, 249, 250);">Trang web của chúng tôi được thiết kế một cách đơn giản. Giúp bạn tìm mọi thứ dễ dàng và các danh mục dự án rõ ràng đảm bảo rằng mọi người đều có thể góp phần bảo vệ môi trường.</span><br><br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><i class="fa fa-star rounded-circle" style="font-size: 36px;background-color: #4AB67E;padding: 20px;color: white;"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title">Chia Sẻ Hy Vọng</h3>
-                                <p class="card-text">Hãy tham gia đóng góp tài chính để cùng chia sẻ niềm hy vọng và hành động vì một tương lai tươi sáng hơn. Chúng ta có thể thay đổi thế giới bằng sự đóng góp của mỗi người.</p>
+                                <h3 class="card-title">Chia Sẻ Hi Vọng</h3>
+                                <p class="card-text"><span style="color: rgb(33, 37, 41);">Hãy tham gia đóng góp tài chính để cùng chia sẻ niềm hy vọng và hành động vì một tương lai tươi sáng hơn. Chúng ta có thể thay đổi thế giới bằng sự đóng góp của mỗi người.</span><br><br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><i class="fa fa-building rounded-circle" style="font-size: 36px;background-color: #4AB67E;padding: 20px;color: white;"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Tổ Chức Phi Lợi Nhuận</h3>
                                 <p class="card-text">Trang web của chúng tôi hoạt động dưới hình thức phi lợi nhuận với mục tiêu tận tâm bảo vệ môi trường. Chúng tôi không đặt mục tiêu kiếm lợi nhuận cá nhân mà tập trung vào một mục tiêu cao cả hơn: bảo vệ và duy trì sự cân bằng của môi trường tự nhiên.</p>
@@ -58,103 +63,33 @@
                 </div>
             </div>
         </section>
-        <section style="background-color: #2B7C5F;">
+        <section style="background-color:#4AB67E;">
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
                     <div class="col-md-8 col-xl-6 text-center mx-auto">
-                        <h2 style="color: white;"><strong>Dự Án Trên COMPANY</strong></h2>
+                        <h2><strong>Dự Án Nổi Bật Trên DoAn</strong></h2>
                     </div>
                 </div>
                 <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                    <div class="col">
-                        <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project1.jpeg">
-                            <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Cây cối</p>
-                                <h4 class="card-title"><strong>10 nghìn = 1 cây</strong></h4>
-                                <p class="card-text">Dự án này là một sáng kiến phi lợi nhuận với mục tiêu đơn giản: mỗi khoản quyên góp 10 nghìn đồng sẽ được dùng để trồng một cây xanh.&nbsp;</p>
-                                <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                    <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Mục tiêu</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project2.jpeg">
-                            <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Rác thải nhựa, Nguồn nước</p>
-                                <h4 class="card-title"><strong>Dọn Rác Sông Sài Gòn</strong></h4>
-                                <p class="card-text">Dự án 'Dọn Rác Quanh Sông Sài Gòn' là một nỗ lực cộng đồng đơn giản nhưng ý nghĩa, nhằm tạo ra một môi trường sạch sẽ và xanh đẹp hơn.&nbsp;</p>
-                                <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                    <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Mục tiêu</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project3.jpg"">
-                            <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Công nghệ xanh</p>
-                                <h4 class="card-title"><strong>Ống hút gạo</strong></h4>
-                                <p class="card-text">Chúng tôi cung cấp các ống hút thân thiện với môi trường, được làm từ các vật liệu tái chế, để thay thế ống hút nhựa truyền thống.</p>
-                                <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                    <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Mục tiêu</p>
-                                        <p class="text-muted mb-0">65,000$</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    @{ Html.RenderAction("ProjectPartial", "Project");}
                 </div>
             </div>
         </section>
-        <section style="background-color: #D9D9D9;">
+        <section style="background-color:#D9D9D9;">
             <div class="container py-4 py-xl-5">
                 <div class="row gy-4 gy-md-0">
                     <div class="col-md-6">
-                        <div class="p-xl-5 m-xl-5">
-                        <img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="~/Content/img/trust.jpeg" ></div>
+                        <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="~/Content/img/trust.jpeg"></div>
                     </div>
                     <div class="col-md-6 d-md-flex align-items-md-center">
                         <div style="max-width: 350px;">
-                            <h2 class="text-uppercase fw-bold">Niềm tin và trách nhiệm</h2>
-                            <p class="my-3">Chúng tôi luôn đặt niềm tin và trách nhiệm lên hàng đầu. Chúng tôi tin rằng mỗi cá nhân có trách nhiệm bảo vệ môi trường và góp phần vào việc duy trì hành tinh xanh sạch.&nbsp;</p><a class="btn btn-outline-primary btn-lg" role="button" href="#">Bảo vệ môi trường ngay!</a>
+                            <h2 class="text-uppercase fw-bold">NIỀM TIN VÀ TRÁCH NHIỆM</h2>
+                            <p class="my-3">Chúng tôi luôn đặt niềm tin và trách nhiệm lên hàng đầu. Chúng tôi tin rằng mỗi cá nhân có trách nhiệm bảo vệ môi trường và góp phần vào việc duy trì hành tinh xanh sạch.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Bảo Vệ Môi Trường Ngay!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
         <section>
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
@@ -169,8 +104,8 @@
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">Thân Huy</p>
-                                    <p class="text-muted mb-0">Người dùng</p>
+                                    <p class="fw-bold text-success mb-0">Thân Huy</p>
+                                    <p class="text-muted mb-0">Người Dùng</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
@@ -184,8 +119,8 @@
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">Alex Nguyễn</p>
-                                    <p class="text-muted mb-0">Nhà sáng tạo nội dung</p>
+                                    <p class="fw-bold text-success mb-0">Alex Nguyễn</p>
+                                    <p class="text-muted mb-0">Nhà Sáng Tạo Nội Dung</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
@@ -199,8 +134,8 @@
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">Xuân Thái</p>
-                                    <p class="text-muted mb-0">Nhà hảo tâm</p>
+                                    <p class="fw-bold text-success mb-0">Xuân Thái</p>
+                                    <p class="text-muted mb-0">Nhà Hảo Tâm</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
