--- a/website-projexts/Views/Project/ProjectDetail.cshtml
+++ b/website-projexts/Views/Project/ProjectDetail.cshtml
@@ -24,7 +24,7 @@
                                 <h2>
                                     @Html.DisplayFor(model => model.ProjectName)
                                 </h2>
-                                <img class="img-fluid d-block" src="@Url.Content(Model.ProjectImage)" alt="First slide">
+                                <img class="img-fluid d-block" src="@Url.Content(Model.ProjectImage)">
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-user" style="font-size: 30px;margin-right: 10px ;"></i>
