--- a/website-projexts/Views/Project/ProjectEdit.cshtml
+++ b/website-projexts/Views/Project/ProjectEdit.cshtml
@@ -17,7 +17,7 @@
     <title>ProjectEdit</title>
 </head>
 <body>
-    <section class="clean-block clean-form dark align-self-center">
+    <section class="clean-block clean-form dark">
         <div class="container">
             <div class="block-heading" style="padding-top: 0px;">
                 <h2 class="text-primary">Chỉnh Sửa Dự Án</h2>
@@ -33,67 +33,67 @@
                 @Html.HiddenFor(model => model.PostedTime)
                 @Html.HiddenFor(model => model.ProjectImage)
 
-                <div style="max-width: 1000px;">
+                <div class="form-group mb-3">
+                    <label class="form-label">Tên Dự Án</label>
+                    @Html.EditorFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                    @Html.ValidationMessageFor(model => model.ProjectName, "", new { @class = "text-danger" })
+                </div>
 
-                    <div class="form-group mb-3">
-                        <label class="form-label">Tên Dự Án</label>
-                        @Html.EditorFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control" ,@required = "required"} })
-                        @Html.ValidationMessageFor(model => model.ProjectName, "", new { @class = "text-danger" })
-                    </div>
+                <div class="form-group mb-3">
+                    <label class="form-label">Chọn Danh Mục</label>
+                    @Html.DropDownList("CategoryID", (IEnumerable<SelectListItem>)ViewBag.Categories, "Chọn một danh mục", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+                </div>
 
-                    <div class="form-group mb-3">
-                        <label class="form-label">Chọn Danh Mục</label>
-                        @Html.DropDownList("CategoryID", (IEnumerable<SelectListItem>)ViewBag.Categories, "Chọn một danh mục", new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
-                    </div>
+                <div class="form-group mb-3">
+                    <label class="form-label">Mục Tiêu</label>
+                    @Html.EditorFor(model => model.Goal, new { htmlAttributes = new { @class = "form-control", @required = "required", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.Goal, "", new { @class = "text-danger" })
+                </div>
 
-                    <div class="form-group mb-3">
-                        <label class="form-label">Mục Tiêu</label>
-                        @Html.EditorFor(model => model.Goal, new { htmlAttributes = new { @class = "form-control" ,@required = "required", @autocomplete= "off"} })
-                        @Html.ValidationMessageFor(model => model.Goal, "", new { @class = "text-danger" })
-                    </div>
+                <div class="color form-group mb-3">
+                    <label class="form-label" style="margin-top: 15px;">Hình ảnh</label>
 
-                    <div class="color form-group mb-3">
-                        <label class="form-label" style="margin-top: 15px;">Hình ảnh</label>
-                        <section>
-                            <div class="container-fluid">
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-12">
-                                        <div class="file-upload-wrapper">
-                                            <div class="flex-wrap view file-upload" style="padding-bottom: 7px; padding-right: 4px; height: 302px;">
-                                                <img class="w-100 img-fluid" style="height: 230px;object-fit: cover;"
-                                                     src="@Url.Content(Model.ProjectImage)" id="previewImg" />
-                                                <input class="form-control file_upload" type="file" name="UploadImage" id="input-file-now"
-                                                       onchange="ChangeImage(this, document.getElementById('previewImg'))">
-                                            </div>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-xxl-12">
+                                    <div class="file-upload-wrapper">
+                                        <div class="flex-wrap view file-upload" style="padding-bottom: 7px; padding-right: 4px; height: 302px;">
+                                            <img class="w-100 img-fluid" style="height: 230px;object-fit: cover;"
+                                                    src="@Url.Content(Model.ProjectImage)" id="previewImg" />
+                                            <input class="form-control file_upload" type="file" name="UploadImage" id="input-file-now"
+                                                    onchange="ChangeImage(this, document.getElementById('previewImg'))">
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </section>
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label class="form-label">Tóm Tắt Về Dự Án</label>
-                        @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control", @id = "summernote", style = "height: 7rem;" } })
-                        @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label class="form-label">Thông Tin về Dự Án</label>
-                        @Html.EditorFor(model => model.LongDescription, new { htmlAttributes = new { @class = "form-control", @id = "summernote-1", style = "height: 30rem;" } })
-                        @Html.ValidationMessageFor(model => model.LongDescription, "", new { @class = "text-danger" })
-                    </div>
-
-                    <hr style="margin-top: 30px;margin-bottom: 10px;">
-                    <div class="form-group mb-3">
-                        <button class="btn btn-primary d-block w-100" id="submitButton" type="submit" value="Create"><i class="fa fa-save"></i>&nbsp;Tạo Mới</button>
-                        <a class="btn btn-danger d-block w-100" role="button" href="@Url.Action("ProjectList")" style="margin-top: 15px;"><i class="fa fa-arrow-left"></i>&nbsp;Hủy Bỏ</a>
-                    </div>
+                        </div>
+                    
                 </div>
+
+                <div class="form-group mb-3">
+                    <label class="form-label">Tóm Tắt Về Dự Án</label>
+                    @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control", @id = "summernote", style = "height: 7rem;" } })
+                    @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group mb-3">
+                    <label class="form-label">Thông Tin về Dự Án</label>
+                    @Html.EditorFor(model => model.LongDescription, new { htmlAttributes = new { @class = "form-control", @id = "summernote-1", style = "height: 30rem;" } })
+                    @Html.ValidationMessageFor(model => model.LongDescription, "", new { @class = "text-danger" })
+                </div>
+
+                <hr style="margin-top: 30px;margin-bottom: 10px;">
+                <div class="form-group mb-3">
+                    <button class="btn btn-primary d-block w-100" id="submitButton" type="submit" value="Create"><i class="fa fa-save"></i>&nbsp;Tạo Mới</button>
+                    <a class="btn btn-danger d-block w-100" role="button" href="@Url.Action("ProjectList")" style="margin-top: 15px;"><i class="fa fa-arrow-left"></i>&nbsp;Hủy Bỏ</a>
+                </div>
+               
             }
         </div>
     </section>
+    @{Html.RenderAction("UpdateEdit", "Update", new { projectID = ViewBag.ProjectID });}
+
 </body>
 </html>
 
