--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -1,74 +1,116 @@
-﻿<!DOCTYPE html>
+﻿<link href="~/Content/home.css" rel="stylesheet" />
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <title>DoAn</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body clean-navbar navbar-light">
-        <div class="container">
-            <a class="navbar-brand logo" href="#">Company</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <style>
+        .navbar-toggle {
+            z-index: 3;
+        }
+
+        .navbar-default {
+            background-color: #ffffff;
+            background-image: none;
+            margin-bottom: 20px;
+        }
+
+        @@media screen and (min-width: 768px) {
+            .navbar-brand-centered {
+                position: absolute;
+                left: 50%;
+                display: block;
+                width: 160px;
+                text-align: center;
+            }
+        }
+
+        @@media screen and (min-width: 768px) {
+            .navbar > .container .navbar-brand-centered,
+            .navbar > .container-fluid .navbar-brand-centered {
+                margin-left: -80px;
+            }
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+            <div>
+                <a class="navbar-brand navbar-brand-centered" href="@Url.Action("Index","Home")">
+                    <img style="max-height:50px;" src="~/Content/img/logo.jpeg">
+                </a>
+                <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            </div>
             <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">Danh Mục</a></li>
+                    <li class="nav-item"><a class="nav-link" href="@Url.Action("ProjectList","Project")">Tìm Kiếm</a></li>
+                </ul>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Trang chủ</a></li>
-                    <li class="nav-item"><a class="nav-link" href="features.html">Tính năng</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Khám phá</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about-us.html">Về chúng tôi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Đăng Nhập</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Về Chúng Tôi</a></li>
+                    <li class="nav-item d-flex">
+                        @if (Session["UserID"] == null)
+                        {
+                            <a class="nav-link" href="@Url.Action("Login","User")">Đăng Nhập</a>
+
+                        }
+                        else
+                        {
+                            Html.RenderAction("UserStuff", "Home");
+                        }
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <section>
         @RenderBody()
     </section>
-    <footer class="page-footer dark bg-dark">
+
+    <footer class="page-footer dark">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <h5>Bắt đầu</h5>
+                    <h5>Bắt Đầu Với</h5>
                     <ul>
-                        <li><a href="#">Trang chủ</a></li>
-                        <li><a href="#">Đăng ký</a></li>
-                        <li><a href="#">Đăng nhập</a></li>
+                        <li><a href="#">Trang Chủ</a></li>
+                        <li><a href="#">Đăng Ký</a></li>
+                        <li><a href="#">Đăng Nhập</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>Về chúng tôi</h5>
+                    <h5>Về Chúng Tôi</h5>
                     <ul>
-                        <li><a href="#">Thông tin</a></li>
-                        <li><a href="#">Liên hệ</a></li>
-                        <li><a href="#">Phản hồi</a></li>
+                        <li><a href="#">Thông Tin</a></li>
+                        <li><a href="#">Liên Hệ</a></li>
+                        <li><a href="#">Phản Hồi</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>Khám phá</h5>
+                    <h5>Khám Phá</h5>
                     <ul>
-                        <li><a href="#">Danh mục</a></li>
-                        <li><a href="#">Tìm kiếm</a></li>
-                        <li><a href="#">Hỗ trợ</a></li>
+                        <li><a href="#">Danh Mục</a></li>
+                        <li><a href="#">Tìm Kiếm</a></li>
+                        <li><a href="#">Hỗ Trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>Chính sách</h5>
+                    <h5>Điều Khoản</h5>
                     <ul>
                         <li><a href="#">Điều khoản dịch vụ</a></li>
-                        <li><a href="#">Điều khoản sử dụng</a></li>
-                        <li><a href="#">Chính sách bảo mật</a></li>
+                        <li><a href="#">Điều Khoản Sử Dụng</a></li>
+                        <li><a href="#">Chính Sách Bảo Mật</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright">
-            <p>© 2023 not Copyright&nbsp;</p>
-        </div>
     </footer>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
