--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
 </head>
 <body>
     <style>
+        .custom-navbar {
+            background-color: #3b3b3b;
+        }
         .navbar-toggle {
             z-index: 3;
         }
@@ -29,16 +32,44 @@
                 text-align: center;
             }
         }
-
         @@media screen and (min-width: 768px) {
             .navbar > .container .navbar-brand-centered,
             .navbar > .container-fluid .navbar-brand-centered {
                 margin-left: -80px;
             }
         }
+        .login-button {
+            background-color: #4AB67E;
+            border: none;
+            border-radius: 10px;
+            width: 120px;
+            height: 40px;
+            text-align: center;
+            color: #000000; 
+            font-size: 16px; 
+            font-weight: bold;
+            cursor: pointer; 
+            transition: background-color 0.3s ease; 
+        }
+         
+            .login-button:hover {
+                background-color: #368c63; 
+            }
+
+        .navbar-nav .nav-link {
+            color: #ffffff; 
+            text-decoration: underline; 
+        }
+
+            .navbar-nav .nav-link:hover,
+            .navbar-nav .nav-link:visited,
+            .navbar-nav .nav-link:focus,
+            .navbar-nav .nav-link:active {
+                text-decoration: none; 
+            }
     </style>
 
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light custom-navbar ">
         <div class="container-fluid">
             <div>
                 <a class="navbar-brand navbar-brand-centered" href="@Url.Action("Index","Home")">
@@ -56,8 +87,7 @@
                     <li class="nav-item d-flex">
                         @if (Session["UserID"] == null)
                         {
-                            <a class="nav-link" href="@Url.Action("Login","User")">Đăng Nhập</a>
-
+                            <a class="nav-link" href="@Url.Action("Login","User")"><button class = "login-button">Đăng Nhập</button></a>
                         }
                         else
                         {
