90% done (only weird interaction or typo left)

--- a/website-projexts/Views/Home/Index.cshtml
+++ b/website-projexts/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                                 <h1 class="text-uppercase fw-bold">Bắt Đầu bảo vệ trái đất từ 
                                 <span style="color:#4AB67E">DoAN</span></h1>
                                 <p class="my-3">Trang web của chúng tôi trao quyền cho bạn hành động. Bằng cách hỗ trợ các dự án của chúng tôi, bạn tạo ra sự khác biệt trong việc bảo vệ hành tinh của chúng ta.</p>
-                                <a class="btn btn-primary btn-lg me-2" role="button" href="#"><strong>Đăng Ký</strong></a>
+                                <a class="btn btn-primary btn-lg me-2" role="button" href="@Url.Action("Register","User")"><strong>Đăng Ký</strong></a>
                                 <a class="btn btn-outline-success btn-lg" role="button" href="#"><strong>Tìm hiểu thêm</strong></a>
                             </div>
                         </div>
@@ -84,7 +84,8 @@
                     <div class="col-md-6 d-md-flex align-items-md-center">
                         <div style="max-width: 350px;">
                             <h2 class="text-uppercase fw-bold">NIỀM TIN VÀ TRÁCH NHIỆM</h2>
-                            <p class="my-3">Chúng tôi luôn đặt niềm tin và trách nhiệm lên hàng đầu. Chúng tôi tin rằng mỗi cá nhân có trách nhiệm bảo vệ môi trường và góp phần vào việc duy trì hành tinh xanh sạch.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Bảo Vệ Môi Trường Ngay!</a>
+                            <p class="my-3">Chúng tôi luôn đặt niềm tin và trách nhiệm lên hàng đầu. Chúng tôi tin rằng mỗi cá nhân có trách nhiệm bảo vệ môi trường và góp phần vào việc duy trì hành tinh xanh sạch.</p>
+                            <a class="btn btn-primary btn-lg me-2" role="button" href="@Url.Action("ProjectCreate","Project")">Bảo Vệ Môi Trường Ngay!</a>
                         </div>
                     </div>
                 </div>
