--- a/website-projexts/Views/Category/CategoryPartial.cshtml
+++ b/website-projexts/Views/Category/CategoryPartial.cshtml
@@ -14,7 +14,7 @@
         <div class="form-check">
             <input class="form-check-input" type="radio" id="category-@category.CategoryID" name="selectedCategoryId" value="@category.CategoryID">
             <label class="form-check-label" for="category-@category.CategoryID">
-                @category.Name
+                @category.CategoryName
             </label>
         </div>
     }
