--- a/website-projexts/Views/Project/ProjectDetail.cshtml
+++ b/website-projexts/Views/Project/ProjectDetail.cshtml
@@ -41,7 +41,7 @@
                                 </p>
                                 <p style="margin-right: 10px;margin-left: 10px;"><span style="color: rgb(55, 54, 55); background-color: initial;">•</span></p><i class="fa fa-tag" style="font-size: 30px;margin-right: 10px;"></i>
                                 <p>
-                                    @Html.DisplayFor(model => model.Category.Name)
+                                    @Html.DisplayFor(model => model.Category.CategoryName)
                                 </p>
                             </div>
                             <hr class="hr hr-blurry">
