--- a/website-projexts/Views/Project/ProjectList.cshtml
+++ b/website-projexts/Views/Project/ProjectList.cshtml
@@ -76,7 +76,7 @@
                                                      src="@Url.Content(item.ProjectImage)">
                                                 <div class="card-body p-4">
                                                     <p class="card-text mb-0" style="text-decoration: none; color: #4AB67E ">
-                                                        @Html.DisplayFor(modelItem => item.Category.Name)
+                                                        @Html.DisplayFor(modelItem => item.Category.CategoryName)
                                                     </p>
                                                     <a class="stretched-link" style="text-decoration: none; color: #4AB67E " href="@Url.Action("ProjectDetail", "Project", new { id = item.ProjectID})">
                                                         <h4>
