--- a/website-projexts/Views/Update/UpdateCreate.cshtml
+++ b/website-projexts/Views/Update/UpdateCreate.cshtml
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group mb-3">
                 <label class="form-label">Nội Dung Cập Nhật</label>
-                @Html.EditorFor(model => model.UpdateText, new { htmlAttributes = new { @class = "form-control", @id = "summernote-1" ,@placeholder = "Thông tin" ,@style = "height: 30rem;" } })
+                @Html.TextAreaFor(model => model.UpdateText, new { @class = "form-control", @id = "summernote-1", @placeholder = "Thông tin", @style = "height: 30rem;" })
                 @Html.ValidationMessageFor(model => model.UpdateText, "", new { @class = "text-danger" })
             </div>
             <hr style="margin-top: 30px;margin-bottom: 10px;">
