--- a/website-projexts/Views/User/UserPage.cshtml
+++ b/website-projexts/Views/User/UserPage.cshtml
@@ -16,7 +16,7 @@
     @Html.ValidationSummary(true, "Có Lỗi Xảy Ra", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.UserID)
 
-    <div class="container">
+    <div class="container" style="margin-top: 40px">
         <div class="row gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3">
                 <div class="card h-100">
@@ -85,11 +85,11 @@
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex">
                                 <label class="form-label" for="ciTy" style="margin-right: 16px;">Số Lần Ủng Hộ Dự Án Khác:</label>
-                                <p>@Model.TotalFundsRaised</p>
+                                <p>@Model.DonationsCount</p>
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex">
                                 <label class="form-label" for="sTate" style="margin-right: 16px;">Tổng Số Tiền Đã Gây Quỹ</label>
-                                <p>@Model.DonationsCount</p>
+                                <p>@Model.TotalFundsRaised</p>
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex">
                                 <label class="form-label" for="zIp" style="margin-right: 16px;">Tổng Số Tiền Đã Ủng Hộ:</label>
@@ -97,9 +97,12 @@
                             </div>
                         </div>
                         <div class="row gutters">
-                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-between">
                                 <div class="text-right">
                                     <input class="btn btn-primary" type="submit" id="submit" value="Cập nhật">
+                                </div>  
+                                <div class="text-right">
+                                    <a class="btn btn-danger" href="@Url.Action("Logout","User")">Đăng Xuất</a>
                                 </div>
                             </div>
                         </div>
